Fixing Buttons Overlapping bug

--- a/style/base.css
+++ b/style/base.css
@@ -46,6 +46,7 @@
   gap: 2px;
   padding: 0;
   line-height: 1;
+  margin-top: 20px;
 }
 
 /* Style our custom JupyterLab icon buttons to match CodeMirror line height */
